[package]
name = "pkg"
version = "0.1.0"
authors = ["yi lu <luyikk@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
pkgbuilder={path="pkg_builder"}
bytes="0.6.0"
paste="1.0.2"
log="0.4"


#[dependencies-dev]
#bytes="0.6.0"
#paste="1.0.2"


[profile.release]
#lto = "fat"
#codegen-units = 1
